# Ants_VS_Bees

./: .gitignore
ants_v_bees/: CMakeLists.txt  ant.cpp  ant.h  bee.cpp  bee.h  bodyguard.cpp  bodyguard.h  fire.cpp  fire.h  game.cpp  game.h  harvester.cpp  harvester.h  insect.cpp  insect.h  long_thrower.cpp  long_thrower.h  main.cpp  ninja.cpp  ninja.h  place.cpp  place.h  short_thrower.cpp  short_thrower.h  thrower.cpp  thrower.h  wall.cpp  wall.h
